--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
   <uses-permission android:name="android.permission.CAMERA" /> 
   <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" /> 
 
@@ -24,6 +25,7 @@
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+     <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
      <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
      <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
      <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
