--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-native-awesome-alerts": "^1.2.0",
     "react-native-btr": "^1.1.4",
     "react-native-fs": "^2.13.3",
-    "react-native-gesture-handler": "^1.2.1",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-image-base64": "^0.1.3",
     "react-native-image-pan-zoom": "^2.1.11",
     "react-native-image-picker": "^0.28.1",
@@ -29,6 +29,7 @@
     "react-native-pinch-zoom-view": "^0.2.0",
     "react-native-raw-bottom-sheet": "^2.0.2",
     "react-native-router-flux": "^4.0.6",
+    "react-native-share": "^1.2.1",
     "react-native-simple-toast": "^0.0.8",
     "react-native-vector-icons": "^6.4.2",
     "react-native-video": "^4.4.1",
@@ -48,6 +49,9 @@
     "react-test-renderer": "16.8.3"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": [
+      "./node_modules/react-native-gesture-handler/jestSetup.js"
+    ]
   }
 }
